working single player

--- a/index.html
+++ b/index.html
@@ -3,14 +3,37 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title></title>
+    <title>Tick tac toe</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
+    <div class="game-board">
 
-    <script src="js/index.js"></script>
+        <table>
+            <tr>
+                <td id="0"></td>
+                <td id="1"></td>
+                <td id="2"></td>
+            </tr>
+            <tr>
+                <td id="3"></td>
+                <td id="4"></td>
+                <td id="5"></td>
+            </tr>
+            <tr>
+                <td id="6"></td>
+                <td id="7"></td>
+                <td id="8"></td>
+            </tr>
+        </table>
+        <div class="game-over hidden">
+            <button onClick="resetGame()">Reset game</button>
+        </div>
+    </div>
+
+    <script src="index.js"></script>
 </body>
 
 </html>
