handle tie and render message on game over

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             </tr>
         </table>
         <div class="game-over hidden">
-            <button onClick="resetGame()">Reset game</button>
+            <h2></h2>
+            <button onClick="startGame()">Reset game</button>
         </div>
     </div>
 
